--- a/Flask Web Development/templates/login.html
+++ b/Flask Web Development/templates/login.html
@@ -18,12 +18,12 @@
 
                 <div class="input_group">
                     <i class="fa fa-user"></i>
-                    <input type="text" placeholder="Username" class="input_text" autocomplete="off" />
+                    <input type="text" id="username" placeholder="Username" class="input_text" autocomplete="off" />
                 </div>
 
                 <div class="input_group">
                     <i class="fa fa-unlock-alt"></i>
-                    <input type="password" placeholder="Password" class="input_text" autocomplete="off" />
+                    <input type="password" id="password" placeholder="Password" class="input_text" autocomplete="off" />
                 </div>
 
                 <div class="button_group" id="login_button">
