Update Login/SignUp button css

--- a/Flask Web Development/templates/login.html
+++ b/Flask Web Development/templates/login.html
@@ -48,7 +48,7 @@
 
           <div class="fotter">
             <a>Forgot Password ?</a>
-            <a href="register">SingUp</a>
+            <a href="/register">SingUp</a>
           </div>
         </div>
       </form>
