--- a/Flask Web Development/templates/register.html
+++ b/Flask Web Development/templates/register.html
@@ -60,7 +60,7 @@
                 </div> -->
 
           <button type="submit" class="button_group" id="login_button">
-            Login
+            SingUp
           </button>
         </div>
       </form>
