--- a/Flask Web Development/static/login.css
+++ b/Flask Web Development/static/login.css
@@ -122,7 +122,7 @@ h2 {
 
 }
 
-#login_button a {
+button {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -137,6 +137,10 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+button:hover {
+    background-color: #00ccff;
 }
 
 .fotter {
