correct the spelling of signup 🤣

--- a/Flask Web Development/templates/register.html
+++ b/Flask Web Development/templates/register.html
@@ -16,7 +16,7 @@
     <div class="login_form_container">
       <form method="post" action="/register">
         <div class="login_form">
-          <h2>SingUp</h2>
+          <h2>signup</h2>
 
           <div class="input_group">
             <i class="fa fa-user"></i>
@@ -60,7 +60,7 @@
                 </div> -->
 
           <button type="submit" class="button_group" id="login_button">
-            SingUp
+            signup
           </button>
         </div>
       </form>
